@@ -53,6 +53,7 @@
 /* its in win32/time.c */
 #define HAVE_USLEEP 1
 
+#define HAVE_GETHOSTNAME 1
 #define HAVE_GETCWD 1
 #define HAVE_POSIX_READDIR_R 1
 #define NEED_ISBLANK 1
